<resources>
    <string name="app_name">BlueFire Radio</string>
    <string name="server_client_id">772300641741-7ecvkvjolr3srpbfvnvjlfa5j7a0ooqe</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="string_home">Home</string>
    <string name="string_browse_songs">Browse Songs</string>
    <string name="string_your_playlists">Your Playlists</string>
    <string name="string_settings">Settings</string>
    <string name="string_log_out">Log out</string>
</resources>
