<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/string_home" />
        <item
            android:id="@+id/nav_browse_songs"
            android:icon="@drawable/ic_music_note"
            android:title="@string/string_browse_songs" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_playlists"
            android:title="@string/string_your_playlists" />
    </group>

    <!--An id is necessary so that a separator will appear between the groups-->
    <group android:id="@+id/group_nav_log_out">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/string_settings" />
        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/logout"
            android:title="@string/string_log_out" />
    </group>
</menu>
